Revise JavaFX setup instructions in README
Updated instructions for JavaFX SDK usage and provided an example launch.json for VSCode.